medication pages body only - no connection to firestore yet

--- a/lang/en.json
+++ b/lang/en.json
@@ -133,6 +133,7 @@
 
     "Connected Device": "Connected Device",
     "Log your sleeping schedule": "Log your sleeping schedule",
+    "Manage your medications": "Manage your medications",
     "Stressed? Relax here": "Stressed? Relax here",
 
     "Types of exercises": "Types of exercises",
