--- a/lang/pt.json
+++ b/lang/pt.json
@@ -130,6 +130,7 @@
 
     "Connected Device": "Dispositivos ligados",
     "Log your sleeping schedule": "Registe o seu horario de sono",
+    "Manage your medications": "Medicação",
     "Stressed? Relax here": "Exercicios de respiração",
 
     "Types of exercises": "Tipos de exercicios",
