--- a/lang/pt.json
+++ b/lang/pt.json
@@ -1,238 +1,235 @@
-{
-    
-    "Your email address appears to be invalid.": "O seu email é invalido",
-    "Your password is invalid.": "A sua password está incorreta.",
-    "User with this email doesn't exist.": "O usuário com este e-mail não existe.",
-    "User with this email has been disabled.": "O usuário com este e-mail foi desativado",
-    "Too many requests. Try again later.": "Too many requests. Try again later.",  
-    "Signing in with Email and Password is not enabled.": "O login com e-mail e senha não está ativado",
-    "An undefined error happened.": "Ocorreu um erro indefinido.",
-    "Sign in successful": "Autenticação bem-sucedida",
-    "Your password is too small.": "A sua senha é muito pequena.",
-    "This email has already been used.": "Este email já foi usado.",
-   
-    "None": "Nenhum",
-    "Unselected": "Não selecionado",
-    "Diziness": "Tonturas",
-    "Headaches": "Dor de cabeça",
-    "Irritability": "Irritabilidade",
-    "Mood changes": "Mudanças de humor.",
-    "Skipping Menstrual Cycle": "Ausência, alteração do ciclo menstrual.",
-    "Somnolence": "Sonolência",
-    "Sex": "Genero",
-    "Male": "Masculino",
-    "Female": "Feminino",
-    "Must be filled.": "Tem de ser preenchido.",
-    "Name": "Nome",
-    "Age": "Idade",
-    "Seizure Frequency": "Frequência de crises.",
-    "(e.g. once a week)": "(por exemplo uma vez por semana)",
-    "Most common type of seizure:   ": "Tipo de crise mais comum:   ",
+{   
     "Absence": "Ausência",
-    "Atonic": "Atónica",
-    "Clonic": "Clonica",
-    "Myoclonic": "Mioclónica",
-    "Tonic": "Tónica",
-    "Tonic Clonic": "Tónica clónica",
-    "Medication prescription:   ": "Prescrição médicação:   ",
-    "Other medication": "Outro medicamento",
-    "Most common secondary effects:   ": "Efeitos secundários mais comuns:   ",
-    "Finish": "Terminar",
-
-
-    "Has to be a valid Email.": "Tem de ser um email valido.",
-    "You need a password.": "Necessita de uma senha.",
-    "Password": "Senha",
-    "Sign in": "Autenticar",
-    "Don't have an account? ": "Não tem conta criada? ",
-    "Sign up": "Registar",
-
-
-    "Patient": "Paciente",
-    "Caregiver": "Cuidador",
-    "You need an email.": "Necessita de um email.",
-    "Already have an account?": "Já tem conta? ",
-
-    "Error": "Erro",
-
-    "Introduction to Epilepsy": "Introdução à Epilepsia",
-    "Information": "Informação",
-    "Patients": "Pacientes",
-    "Camera Access": "Acesso à câmera",
-    "Tool": "Ferramenta",
-    "Record Seizure": "Gravar crises",
-    "caregiver@gmail.com": "cuidador@gmail.com",
-
-
-    "The person you will be monitoring will have to scan this code.": "A pessoa que irá monitorizar terá de fazer scan ao codigo QR.",
-
-
-    "Patient Info": "Informação do Paciente",
-    "Statistics": "Estatiticas",
-    "Seizures": "Crises",
-    
-
+    "Add question": "Adicionar questão",
+    "Add video recording (optional)": "Adicionar gravação de video (opcional)",
+    "Age": "Idade",
+    "Alcohol or Drug Abuse": "Abuso de Alcool ou Drogas",
     "Allow Connected Device(s)": "Permitir conecção de dispositivo(s)",
-    "Connect": "Conectar",
+    "Already have an account?": "Já tem conta? ",
+    "An undefined error happened.": "Ocorreu um erro indefinido.",
+    "Answer": "Resposta",
+    "Associate now!": "Associar agora!",
+    "Atonic": "Atónica",
+    "Automatic Repeated Movements": "Movimentos automaticos e repetitivos",
+    "Awake": "Acordar",
+
+    
+    "Bad": "Mau",
+    "Birth Control Pills": "Pilula",
+    "Bright or flashing lights": "Luzes intermitentes",
 
 
-    "Seizure": "Crise",
-    "I am ok": "Estou bem",
-    "Emergency": "Emergência",
-    "Dismiss": "Descartar",
-
-
-    "Inhale": "Insprire",
-    "Hold": "Sustenha",
-    "Exhale": "Expire",
-
-
-    "To connect to your caregiver, have him scan this QR Code": "Para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
-
-
-    "What is Epilepsy?": "O que é a epilépsia?",
-    "What is a seizure?": "O que é uma crise?",
-    "Types of seizures?": "Tipos de crises?",
-    "Possible trigers?": "Possiveis fatores que puderam despoletar crises?",
-    "Treating Seizures": "Tratar crises",
-    "Managing Epilepsy": "Gerir Epilepsia",
-    "What is SUDEP?": "O que é SUDEP?",
+    "Camera Access": "Acesso à câmera",
+    "Cancel": "Cancelar",
+    "Caregiver": "Cuidador",
+    "caregiver@gmail.com": "cuidador@gmail.com",
     "Challenges in Epilepsy": "Desafios da Epilepsia",
+    "Changes in Medication": "Mudanças na medicação",
+    "Changes in awareness": "Alteração de consciência",
+    "Clonic": "Clonica",
+    "Complete now!": "Completar agora!",
+    "Connect": "Conectar",
+    "CONNECT": "DISPOSITIVOS",
+    "Connected Device": "Dispositivos ligados",
+    "Connected Devices": "Dispositivos",
+    "Create": "Criar",
+    "Custom": "Base",
 
 
     "Date": "Data",
-    "Time": "Hora",
-    "Duration": "Duração",
-    "Type": "Tipo",
-    "Mood": "Humor",
-
-
     "Data": "Dados",
-    "Name is Required": "É necessário um nome",
-    "Symptoms": "Sintomas",
+    "Deep Calm": "Calma profunda",
+    "Description": "Descrição",
+    "Description:": "Descrição:",
+    "Description Notes": "Notas de descrição",
+    "Dismiss": "Descartar",
+    "Diziness": "Tonturas",
+    "Don't have an account? ": "Não tem conta criada? ",
+    "Don't have an account?": "Não tem conta?",
+    "Duration": "Duração",
+
+
     "Email is Required": "É necessário um email",
-    "Please enter a valid email address": "Por favor insira um email valido",
-    "Moods": "Mudanças de humor",
-    "Password is Required": "É necessário uma Senha",
-    "Birth Control Pills": "Pilula",
-    "URL is Required": "É necessário um URL",
-    "Submit": "Submeter",
+    "Emergency": "Emergência",
+    "Emotional Stress": "Stress emocional",
+    "(e.g. once a week)": "(por exemplo uma vez por semana)",
+    "(e.g. mm:ss)": "(exemplo min:seg)",
+    "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
+    "Error": "Erro",
+    "Exhale": "Expire",
 
 
-    "Home": "Pagina inicial",
-    "Surveys": "Questionários",
-    "User": "Utilizador",
-
-    "Connected Devices": "Dispositivos",
-    "Medication": "Medicação",
-    "Sleep": "Sono",
+    "Female": "Feminino",
+    "Fever or Overheated": "Febre",
+    "Finish": "Terminar",
     "Food": "Alimentação",
 
-    "Connected Device": "Dispositivos ligados",
-    "Log your sleeping schedule": "Registe o seu horario de sono",
-    "Stressed? Relax here": "Exercicios de respiração",
 
-    "Types of exercises": "Tipos de exercicios",
-    "Time duration": "Duração",
-
-    "You need to set a time": "Precisa de definir uma hora",
-    "(e.g. hh:mm am or hh:mm pm)": "(exemplo hh:min manhã ou hh:min tarde)",
-    "You need to set a duration.": "Precisa de definir uma duração.",
-    "Seizure Duration": "Duração da crise",
-    "(e.g. mm:ss)": "(exemplo min:seg)",
-    "Seizure Type:": "Tipo de crise:",
-    "Normal": "Normal",
     "Good": "Bom",
-    "Bad": "Mau",
-    "Possible Triggers:": "Fatores que possam dispoletar uma crise",
-    "Changes in Medication": "Mudanças na medicação",
-    "Overtired or irregular sleep": "Cansado ou sono irregular",
-    "Irregular Diet": "Dieta Alimentação irregular",
-    "Alcohol or Drug Abuse": "Abuso de Alcool ou Drogas",
-    "Bright or flashing lights": "Luzes intermitentes",
-    "Emotional Stress": "Stress emocional",
-    "Fever or Overheated": "Febre",
-    "Hormonal Fluctuations": "Flutuações Hormonais",
-    "Sick": "Doente",
-    "Other": "Outros",
-    "Triggers Notes": "Notas de fatores que podem dispoltar crises",
-    "Not filled": "Não preenchido",
-    "Description:": "Descrição:",
+
+
     "Had an aura": "Sentir uma aura",
+    "Has to be a valid Email.": "Tem de ser um email valido.",
+    "Headaches": "Dor de cabeça",
+    "Hold": "Sustenha",
+    "Home": "Pagina inicial",
+    "Hormonal Fluctuations": "Flutuações Hormonais",
+
+
+    "I am ok": "Estou bem",
+    "Information": "Informação",
+    "Inhale": "Inspire",
+    "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
+    "Introduction to Epilepsy": "Introdução à Epilepsia",
+    "Irregular Diet": "Dieta Alimentação irregular",
+    "Irritability": "Irritabilidade",
+
+
+    "Keep exploring!": "Continuar a explorar!",
+
+
+    "Location": "Localização",
+    "Log your sleeping schedule": "Registe o seu horario de sono",
     "Loss of urine or bowel control": "Perda de urina ou de controlo da bexiga",
-    "Changes in awareness": "Alteração de consciência",
-    "Automatic Repeated Movements": "Movimentos automaticos e repetitivos",
     "Loss of Ability to communicate": "Perda de capacidade de comunicação",
+    "Loss of consciousness": "Perda de consciência",
+
+
+    "Male": "Masculino",
+    "Managing Epilepsy": "Gerir Epilepsia",
+    "Medication": "Medicação",
+    "Medication prescription:   ": "Prescrição medicação:   ",
+    "Medication prescription": "Prescrição medicação",
+    "MODULES": "MODULOS",
+    "Mood": "Humor",
+    "Mood:": "Humor:",
+    "Mood after Seizure": "Humor após crise",
+    "Mood changes": "Mudanças de humor.",
+    "Moods": "Mudanças de humor",
+    "Most common seizure": "Crise mais comum",
+    "Most common type of seizure:   ": "Tipo de crise mais comum:   ",
+    "Most common type of seizure": "Tipo mais comum de crise",
+    "Most common secondary effects:   ": "Efeitos secundários mais comuns:   ",
+    "Must be filled.": "Tem de ser preenchido.",
     "Muscle Stiffness": "Rigidez muscular",
     "Muscle twitch": "Espasmos muscular",
-    "Loss of consciousness": "Perda de consciência",
-    "Description Notes": "Notas de descrição",
-    "Post Events:": "Eventos pós crise:",
-    "Unnable to communicate": "Incapaz de comunicar",
-    "Remembers event": "Lembra-se da crise",
     "Muscle weakness": "Enfraquecimento muscular",
-    "Sleepy": "Sonolento",
-    "Post Events Notes": "Notas de eventos pós crise",
-    "Add video recording (optional)": "Adicionar gravação de video (opcional)",
+    "Myoclonic": "Mioclónica",
 
 
-    "Sign Out": "Sair",
+    "Name": "Nome",
+    "Name is Required": "É necessário um nome",
+    "Next": "Próxima",
+    "No patient associated yet!": "Nenhum paciente associado!",
+    "None": "Nenhum",
+    "Normal": "Normal",
+    "Not filled": "Não preenchido",
+    "Notes": "Notes",
 
 
-    "Type of Seizure": "Tipos de crise",
-    "Mood after Seizure": "Humor após crise",
+    "Other": "Outros",
+    "Other medication": "Outro medicamento",
+    "Overtired or irregular sleep": "Cansado ou sono irregular",
+
+
+    "Password": "Senha",
+    "Password is Required": "É necessário uma Senha",
+    "Patient": "Paciente",
+    "Patient Info": "Informação do Paciente",
+    "Patient successfully added!": "Paciente adicionado!",
+    "Patients": "Pacientes",
+    "Please enter a valid email address": "Por favor insira um email valido",
+    "Please scan the code of the person you will be monitoring.": "Por favor faça scan do código QR da pessoa que pretende monitorizar.",
+    "Possible triggers?": "Possiveis fatores que puderam despoletar crises?",
+    "Possible Trigger": "Fatores que possam ter dispoletado uma crise",
     "Possible Triggers": "Possiveis fatores que puderam despoletar crises",
-
-
-    "Inhale-Hold-Exhale-Hold": "Inspire-Sustenha-Expire-Sustenha",
-    "Custom": "Base",
-    "Awake": "Acordar",
-    "Deep Calm": "Calma profunda",
+    "Possible Triggers:": "Fatores que possam dispoletar uma crise",
+    "Post Events": "Eventos pós-crise",
+    "Post Events:": "Eventos pós crise:",
+    "Post Events Notes": "Notas de eventos pós crise",
     "Pranayama": "Pranayama",
+    "Profile incomplete!": "Perfil incompleto!",
+   
+
+    "Question": "Questões",
+    
+
+    "Record Seizure": "Gravar crises",
+    "Remembers event": "Lembra-se da crise",
+    
+
+    "Seizure": "Crise",
+    "Seizure Duration": "Duração da crise",
+    "Seizure Type:": "Tipo de crise:",
+    "Seizures": "Crises",
+    "Seizure Frequency": "Frequência de crises.",
+    "Sex": "Genero",
+    "Signing in with Email and Password is not enabled.": "O login com e-mail e senha não está ativado",
+    "Sign in successful": "Autenticação bem-sucedida",
+    "Sign in": "Autenticar",
+    "Sign In": "Entrar",
+    "Sign Out": "Sair",
+    "Sign up": "Registar",
+    "Sick": "Doente",
+    "Sleep": "Sono",
+    "Sleepy": "Sonolento",
+    "Skipping Menstrual Cycle": "Ausência, alteração do ciclo menstrual.",
+    "Something went wrong... Verify camera permissions.": "Aconteceu alguma coisa... Por favor verifique as permissões da câmara.",
+    "Somnolence": "Sonolência",
     "Square": "Quadrado",
+    "START SCAN": "INICIAR SCAN",
+    "Statistics": "Estatiticas",
+    "STATISTICS": "ESTATITICAS",
+    "Stressed? Relax here": "Exercicios de respiração",
+    "Submit": "Submeter",
+    "Survey Name": "Nome do questionário",
+    "Surveys": "Questionários",
+    "Symptoms": "Sintomas",
+
+
+    "The person you will be monitoring will have to scan this code.": "A pessoa que irá monitorizar terá de fazer scan ao codigo QR.",
+    "This email has already been used.": "Este email já foi usado.",
+    "Time": "Hora",
+    "Time duration": "Duração",
+    "To connect to your caregiver, have him scan this QR Code": "Para conectar-se ao seu cuidador terá de permitir que o mesmo faça o scan ao codigo QR",
+    "Tonic": "Tónica",
+    "Tonic Clonic": "Tónica clónica",
+    "Too many requests. Try again later.": "Too many requests. Try again later.",  
+    "Tool": "Ferramenta",
+    "Treating Seizures": "Tratar crises",
+    "Triggers Notes": "Notas de fatores que podem dispoltar crises",
+    "Type": "Tipo",
+    "Type of Seizure": "Tipos de crise",
+    "Types of seizures?": "Tipos de crises?",
+    "Types of exercises": "Tipos de exercicios",
+    
+
+    "Unnable to communicate": "Incapaz de comunicar",
+    "Unknown": "Não definido",
+    "Unselected": "Não selecionado",
+    "URL is Required": "É necessário um URL",
+    "User": "Utilizador",
+    "USER ID": "ID UTILIZADOR",
+    "User with this email doesn't exist.": "O usuário com este e-mail não existe.",
+    "User with this email has been disabled.": "O usuário com este e-mail foi desativado",
     "Ujjayi": "Ujjayi",
 
 
-    "STATISTICS": "ESTATITICAS",
-    "MODULES": "MODULOS",
-    "CONNECT": "DISPOSITIVOS",
-
-
-    "You need a Survey Name": "É necessário dar um nome ao questionário",
-    "Survey Name": "Nome do questionário",
-    "You need a question": "Necessita de questões",
-    "Question": "Questões",
-    "Add question": "Adicionar questão",
-    "Create": "Criar",
-
-    "Next": "Próxima",
-
-    "USER ID": "ID UTILIZADOR",
-    "Most common type of seizure": "Tipo mais comum de crise",
-    "Medication prescription": "Prescrição medicação",
-    "Most common secondary effects": "Efeitos secundários mais comuns",
-    "Don't have an account?": "Não tem conta?",
-    "Sign In": "Entrar",
-    "No patient associated yet!": "Nenhum paciente associado!",
     "We noticed there is still no patient associated to your account, please associate one.": "Reparámos que não tem nenhum paciente associado, por favor associe um.",
-    "Associate now!": "Associar agora!",
-    "Keep exploring!": "Continuar a explorar!",
-    "Please scan the code of the person you will be monitoring.": "Por favor faça scan do código QR da pessoa que pretende monitorizar.",
-    "START SCAN": "INICIAR SCAN",
-    "Cancel": "Cancelar",
-    "Patient successfully added!": "Paciente adicionado!",
-    "Something went wrong... Verify camera permissions.": "Aconteceu alguma coisa... Por favor verifique as permissões da câmara.",
-    "Most common seizure": "Crise mais comum",
-    "Location": "Localização",
-    "Unknown": "Não definido",
-    "Possible Trigger": "Fatores que possam ter dispoletado uma crise",
-    "Description": "Descrição",
-    "Post Events": "Eventos pós-crise",
-    "Notes": "Notes",
-    "Answer": "Resposta",
-    "Profile incomplete!": "Perfil incompleto!",
     "We noticed your profile is incomplete, please complete it.": "Reparámos que tem o perfil incomplete, por favor complete-o.",
-    "Complete now!": "Completar agora!",
-    "Mood:": "Humor:"
+    "What is Epilepsy?": "O que é a epilépsia?",
+    "What is a seizure?": "O que é uma crise?",
+    "What is SUDEP?": "O que é SUDEP?",
 
+    
+    "You need an email.": "Necessita de um email.",
+    "You need a password.": "Necessita de uma senha.",
+    "You need a question": "Necessita de questões",
+    "You need a Survey Name": "É necessário dar um nome ao questionário",
+    "You need to set a duration.": "Precisa de definir uma duração.",
+    "You need to set a time": "Precisa de definir uma hora",
+    "Your email address appears to be invalid.": "O seu email é invalido",
+    "Your password is too small.": "A sua senha é muito pequena.",
+    "Your password is invalid.": "A sua password está incorreta."
+    
 }
