Sign out + changed login design

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -130,6 +130,7 @@
     "Other": "Outros",
     "Other medication": "Outro medicamento",
     "Overtired or irregular sleep": "Cansado ou sono irregular",
+    "Or sign in with a QR code:": "Ou autenticar com código QR:",
 
 
     "Password": "Senha",
